--- a/src/scss/brand/components/card-text-image/_index.scss
+++ b/src/scss/brand/components/card-text-image/_index.scss
@@ -18,7 +18,7 @@
       width: 100%;
       object-fit: cover;
       max-height: 180px;
-      @include sm {
+      @media only screen and (min-width: 376px) {
         max-height: initial;
       }
     }
