--- a/src/scss/default/components/tabs/_index.scss
+++ b/src/scss/default/components/tabs/_index.scss
@@ -51,7 +51,7 @@
 
         .text-wrapper {
           //stylelint-disable-next-line
-          font-weight: 700 !important;
+          font-family: $font-family-bold;
         }
       }
 
