--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -114,7 +114,7 @@
 
 .carousel-wrapper {
   overflow: hidden;
-  padding-top: 1.5rem;
+  padding-top: 0;
   .carousel-heading {
     margin-bottom: 2rem;
     margin-top: 2rem;
