--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -281,7 +281,7 @@
 
 .article-date {
   color: $color-2;
-  font-weight: $font-extra-bold;
+  font-family: $font-family-extrabold;
   @extend .font-small-12;
   text-align: center;
 }
@@ -495,7 +495,7 @@
 
   .display-on-hover {
     visibility: visible;
-    font-weight: 400 !important;
+    font-weight: $font-normal;
   }
 }
 
@@ -1409,7 +1409,7 @@ ol.alpha-bullets {
     &:before {
       margin-left: -0.5rem;
       margin-right: 0.5rem;
-      font-weight: normal !important;
+      font-weight: $font-normal;
       content: counter(list, lower-alpha) '. ' !important;
       counter-increment: list;
     }
@@ -1560,19 +1560,18 @@ ul.hidden-bullets {
   margin-left: 0 !important;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 320px) {
   .half-slide-carousel .carousel-slides .carousel-slide.active {
-    width: 20% !important;
-    min-width: 20% !important;
+    width: 17% !important;
+    min-width: 17% !important;
     margin-right: 1rem !important;
-    height: max-content;
   }
   .half-slide-carousel
     .carousel-slides
     .carousel-slide.active
-    + .carousel-slide {
-    width: 20% !important;
-    min-width: 20% !important;
+    ~ .carousel-slide {
+    width: 17% !important;
+    min-width: 17% !important;
     margin-right: 1rem !important;
   }
 }
@@ -1770,3 +1769,14 @@ ul.hidden-bullets {
     margin-top: 0;
   }
 }
+
+.megamenu
+  .megamenu-search
+  .searchBox
+  .searchBox-label.is-search-open
+  button.header-search:hover {
+  &:after {
+    display: none;
+  }
+}
+
