--- a/src/scss/brand/components/tabs/_index.scss
+++ b/src/scss/brand/components/tabs/_index.scss
@@ -26,7 +26,7 @@
 
           span {
             font-size: $font-size-12;
-            font-weight: $font-extra-bold;
+            font-family: $font-family-extrabold;
             color: $color-2;
             line-height: 18px;
           }
@@ -41,7 +41,7 @@
 
     .tabContent {
       h3 {
-        font-weight: $font-extra-bold;
+        font-family: $font-family-extrabold;
       }
 
       table {
@@ -60,7 +60,6 @@
               border-bottom: 2px solid $color-2;
               line-height: $line-height-160;
               color: $color-2;
-              font-weight: $font-normal;
             }
 
             td {
@@ -77,7 +76,6 @@
               }
 
               strong {
-                font-weight: $font-normal;
                 color: $color-2;
               }
             }
@@ -125,7 +123,7 @@
       border-bottom: none;
       background-color: transparent;
       color: var(--color-1);
-      font-weight: 700;
+      font-family: $font-family-bold;
     }
 
     .tabs .tabs-nav-list .tabs-nav-item a:hover *,
@@ -400,7 +398,7 @@
   }
 
   .tabs .tabs-nav-list .tabs-nav-item.is-active .text-wrapper {
-    font-weight: 700 !important;
+    font-family: $font-family-bold;
   }
 
   .tabs .tabs-nav-list .tabs-nav-item:hover a {
@@ -453,7 +451,7 @@
               border-bottom: none;
               background-color: transparent;
               color: var(--color-1);
-              font-weight: $font-bold;
+              font-family: $font-family-bold;
               * {
                 color: var(--color-1);
               }
