--- a/src/scss/default/components/accordion/_index.scss
+++ b/src/scss/default/components/accordion/_index.scss
@@ -44,7 +44,7 @@
           border: 0;
           color: $accordion-link-color;
           font-size: $accordion-link-font-size-m;
-          font-weight: 600;
+          font-family: $font-family-semibold;
           text-decoration: none;
         }
       }
