--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1811,9 +1811,12 @@ ul.hidden-bullets {
 
 
 .half-text {
-  height: 100%;
+  padding: 2rem;
+  background: #fff;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
   >.component-content {
-    height: 100%;
+    height: 100% !important;
     >.paragraphSystem {
       height: 100%;
       display: flex;
