--- a/src/scss/brand/components/arrow-links/_index.scss
+++ b/src/scss/brand/components/arrow-links/_index.scss
@@ -14,6 +14,7 @@
     color: $color-2;
     border: 2px solid;
     border-color: $color-primary;
+    z-index: 1000;
     @include sm {
       width: 68px;
       line-height: 68px;
