--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -405,6 +405,7 @@ header {
           display: block !important;
           input {
             display: block !important;
+            height: 18px !important;
           }
         }
       }
@@ -1188,7 +1189,7 @@ li {
           top: 2px !important;
           width: 34px !important;
           background-color: $color-primary;
-          height: 1.875rem !important;
+          height: 29px !important;
           z-index: 0;
           display: block !important;
           @include sm {
