--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -97,7 +97,7 @@ body {
   }
 
   .font-size--small {
-    font-size: 0.75rem;
+    font-size: 0.75rem !important;
   }
   .font-size--medium {
     font-size: 0.875rem;
