--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -405,7 +405,10 @@ header {
           display: block !important;
           input {
             display: block !important;
-            height: 18px !important;
+            height: 38px !important;
+            @include md{
+              height: 18px !important;
+            }
           }
         }
       }
