--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1229,6 +1229,9 @@
           color: $color-black;
           padding: 0.25rem;
         }
+        &.outlined{
+         color: $color-black !important;
+         }
       }
     }
   }
