--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -29,11 +29,14 @@
       height: 100%;
       object-fit: cover;
       max-height: 180px;
-      @include sm {
-        max-height: 100%;
+      @media only screen and (min-width: 481px) {
+        max-height: 300px;
+        height: 300px;
       }
+
       @include md {
         max-height: initial;
+        height: 100%;
       }
     }
   }
@@ -87,11 +90,15 @@
       height: 100%;
       object-fit: cover;
       max-height: 180px;
-      @include sm {
-        max-height: 100%;
+
+      @media only screen and (min-width: 481px) {
+        max-height: 300px;
+        height: 300px;
       }
+
       @include md {
         max-height: initial;
+        height: 100%;
       }
     }
   }
