--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -113,7 +113,7 @@
         }
 
         &.lSPrev {
-          right: 66px;
+          right: 74px;
           @media only screen and (min-width: 480px) {
             right: 80px;
           }
@@ -153,7 +153,7 @@
     margin-bottom: 2rem;
     margin-top: 2rem;
     width: 50%;
-    @include xs {
+    @media screen and (min-width: 370px) {
       width: 60%;
     }
     @include sd {
