--- a/src/scss/brand/components/accessibility/_index.scss
+++ b/src/scss/brand/components/accessibility/_index.scss
@@ -112,7 +112,7 @@ button {
             margin-right: 2px !important;
 
             &:focus {
-              outline: 3px dotted;
+              outline: 2px dotted;
             }
           }
         }
@@ -222,8 +222,8 @@ button {
       input[type='text'] {
         &:focus {
           outline: 2px dotted;
-          &:focus-visible {
-            outline: 2px dotted;
+          @media screen and (max-width: 767px) {
+            border-style: dotted !important;
           }
         }
       }
