--- a/src/scss/brand/components/image-card/_index.scss
+++ b/src/scss/brand/components/image-card/_index.scss
@@ -5,8 +5,9 @@
     bottom: 0;
     padding: 1rem;
     color: $color-2;
-    z-index: 999;
+    /* z-index: 999; */
     background: #ffffff99;
+    width: 100%;
     p {
       margin-bottom: 0;
     }
