--- a/src/scss/brand/components/image-card/_index.scss
+++ b/src/scss/brand/components/image-card/_index.scss
@@ -8,6 +8,9 @@
     /* z-index: 999; */
     background: #ffffff99;
     width: 100%;
+    @include sm {
+      width: min-content;
+    }
     p {
       margin-bottom: 0;
     }
