--- a/src/scss/default/theme/defaults/_default-styles.scss
+++ b/src/scss/default/theme/defaults/_default-styles.scss
@@ -398,6 +398,7 @@ body {
     line-height: inherit;
     padding: inherit;
     text-decoration: none;
+    padding-top: 3px;
 
     &:hover,
     &:focus {
